kubernetes/backenddeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app-tier: backend
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app-tier: backend
  template:
    metadata:
      labels:
        app-tier: backend
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: backend-container
        image: 358454002832.dkr.ecr.us-east-1.amazonaws.com/backend
        ports:
        - containerPort: 4000
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      nodeSelector:
        tier: backend
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: tier
                operator: In
                values:
                - backend
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "backend"
          effect: "NoSchedule"
