kubernetes/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: production
spec:
  containers:
  - name: nginx
    image: busybox
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "200Mi"
        cpu: "100m"
      limits:
        memory: "512Mi"
        cpu: "500m"
    command:
    - sleep
    - infinity
