kubernetes/dbsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: dbsvc
  labels:
    tier: database
spec:
  ports:
  - port: 5432
    targetPort: 5432
    name: headless
  clusterIP: None
  selector:
    tier: database
