kubernetes/frontendsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontendsvc
spec:
  selector:
    app-tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
