kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  namespace: production
  annotations:
   cert-manager.io/cluster-issuer: example-issuer
spec:
  tls:
  - hosts:
      - frontend.devcops.click
    secretName: tls-secret
  ingressClassName: nginx
  rules:
  - host: "frontend.devcops.click"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontendsvc
            port:
              number: 80
  - host: "backend.devcops.click"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backendsvc
            port:
              number: 80
